--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,15 +52,47 @@ dev_dependencies:
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter packages.
 flutter:
+  assets:
+  - assets/images/
+  fonts:
+  - family: DecoType Thuluth
+    
+    fonts:
+      - asset: assets/fonts/DecoType_Thuluth.ttf
+
+  - family: DecoType Thuluth II
+    
+    fonts:
+      - asset: assets/fonts/alfont_com_DTHULUTH-II-1.ttf
+
+  - family: Cairo
+    
+    fonts:
+      - asset: assets/fonts/Cairo-Black.ttf
+      - asset: assets/fonts/Cairo-Bold.ttf
+      - asset: assets/fonts/Cairo-ExtraBold.ttf
+      - asset: assets/fonts/Cairo-ExtraLight.ttf
+      - asset: assets/fonts/Cairo-Light.ttf
+      - asset: assets/fonts/Cairo-Medium.ttf
+      - asset: assets/fonts/Cairo-Regular.ttf
+      - asset: assets/fonts/Cairo-SemiBold.ttf
+
+  - family: Tajawal      
+    fonts:
+      - asset: assets/fonts/Tajawal-Black.ttf
+      - asset: assets/fonts/Tajawal-Bold.ttf
+      - asset: assets/fonts/Tajawal-ExtraBold.ttf
+      - asset: assets/fonts/Tajawal-ExtraLight.ttf
+      - asset: assets/fonts/Tajawal-Light.ttf
+      - asset: assets/fonts/Tajawal-Medium.ttf
+      - asset: assets/fonts/Tajawal-Regular.ttf  
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
@@ -70,19 +102,15 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
 flutter_intl:
   enabled: true
+
+flutter_assets:
+  assets_path: assets/images
+  output_path: lib/utils
+  filename: app_images.dart
+  field_prefix:
