--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,8 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter_localizations:
     sdk: flutter
-  animated_bottom_navigation_bar: ^1.3.3
   curved_navigation_bar: ^1.0.5
+  youtube_player_flutter: ^9.0.1
 
 dev_dependencies:
   flutter_test:
