--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
     sdk: flutter
   curved_navigation_bar: ^1.0.5
   youtube_player_flutter: ^9.0.1
+  flutter_svg: ^2.0.10+1
 
 dev_dependencies:
   flutter_test:
@@ -60,7 +61,7 @@ flutter:
   - family: DecoType Thuluth
     
     fonts:
-      - asset: assets/fonts/DecoType_Thuluth.ttf
+      - asset: assets/fonts/DTHULUTH.TTF
 
   - family: DecoType Thuluth II
     
