--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   curved_navigation_bar: ^1.0.5
   youtube_player_flutter: ^9.0.1
   flutter_svg: ^2.0.10+1
+  bloc: ^8.1.4
+  flutter_bloc: ^8.1.6
 
 dev_dependencies:
   flutter_test:
