--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: al_asas
-description: "A new Flutter project."
+description: "Islamic Educational Academy."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -28,76 +28,67 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  bloc: ^8.1.4
+  cupertino_icons: ^1.0.6
+  curved_navigation_bar: ^1.0.5
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.6
+  flutter_bloc: ^8.1.6
   flutter_localizations:
     sdk: flutter
-  curved_navigation_bar: ^1.0.5
-  youtube_player_flutter: ^9.0.1
   flutter_svg: ^2.0.10+1
-  bloc: ^8.1.4
-  flutter_bloc: ^8.1.6
+  http: ^1.2.1
+  shared_preferences: ^2.2.3
+  youtube_player_flutter: ^9.0.1
 
 dev_dependencies:
+  flutter_lints: ^3.0.0
   flutter_test:
     sdk: flutter
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
-  flutter_lints: ^3.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter packages.
 flutter:
   assets:
-  - assets/images/
+    - assets/images/
   fonts:
-  - family: DecoType Thuluth
-    
-    fonts:
-      - asset: assets/fonts/DTHULUTH.TTF
+    - family: DecoType Thuluth
 
-  - family: DecoType Thuluth II
-    
-    fonts:
-      - asset: assets/fonts/alfont_com_DTHULUTH-II-1.ttf
+      fonts:
+        - asset: assets/fonts/DTHULUTH.TTF
 
-  - family: Cairo
-    
-    fonts:
-      - asset: assets/fonts/Cairo-Black.ttf
-      - asset: assets/fonts/Cairo-Bold.ttf
-      - asset: assets/fonts/Cairo-ExtraBold.ttf
-      - asset: assets/fonts/Cairo-ExtraLight.ttf
-      - asset: assets/fonts/Cairo-Light.ttf
-      - asset: assets/fonts/Cairo-Medium.ttf
-      - asset: assets/fonts/Cairo-Regular.ttf
-      - asset: assets/fonts/Cairo-SemiBold.ttf
+    - family: DecoType Thuluth II
 
-  - family: Tajawal      
-    fonts:
-      - asset: assets/fonts/Tajawal-Black.ttf
-      - asset: assets/fonts/Tajawal-Bold.ttf
-      - asset: assets/fonts/Tajawal-ExtraBold.ttf
-      - asset: assets/fonts/Tajawal-ExtraLight.ttf
-      - asset: assets/fonts/Tajawal-Light.ttf
-      - asset: assets/fonts/Tajawal-Medium.ttf
-      - asset: assets/fonts/Tajawal-Regular.ttf  
+      fonts:
+        - asset: assets/fonts/alfont_com_DTHULUTH-II-1.ttf
 
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
+    - family: Cairo
+
+      fonts:
+        - asset: assets/fonts/Cairo-Black.ttf
+        - asset: assets/fonts/Cairo-Bold.ttf
+        - asset: assets/fonts/Cairo-ExtraBold.ttf
+        - asset: assets/fonts/Cairo-ExtraLight.ttf
+        - asset: assets/fonts/Cairo-Light.ttf
+        - asset: assets/fonts/Cairo-Medium.ttf
+        - asset: assets/fonts/Cairo-Regular.ttf
+        - asset: assets/fonts/Cairo-SemiBold.ttf
+
+    - family: Tajawal
+      fonts:
+        - asset: assets/fonts/Tajawal-Black.ttf
+        - asset: assets/fonts/Tajawal-Bold.ttf
+        - asset: assets/fonts/Tajawal-ExtraBold.ttf
+        - asset: assets/fonts/Tajawal-ExtraLight.ttf
+        - asset: assets/fonts/Tajawal-Light.ttf
+        - asset: assets/fonts/Tajawal-Medium.ttf
+        - asset: assets/fonts/Tajawal-Regular.ttf
+    # The following line ensures that the Material Icons font is
+    # included with your application, so that you can use the icons in
+    # the material Icons class.
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
@@ -107,7 +98,6 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
@@ -118,4 +108,4 @@ flutter_assets:
   assets_path: assets/images
   output_path: lib/utils
   filename: app_images.dart
-  field_prefix:
+  field_prefix: null
